[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/battle/bullet_board_background_sprites/back_dark.png" type="Texture2D" id=1]
[ext_resource path="res://assets/images/sprites_battle/box_border.png" type="Texture2D" id=2]
[ext_resource path="res://assets/battle/BattleBox.gd" type="Script" id=3]
[ext_resource path="res://assets/battle/bullet_board_background_sprites/back_blue.png" type="Texture2D" id=4]





[sub_resource type="Animation" id=7]
resource_name = "elastic_in"
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("BattleBox/Textures:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.0717937),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattleBox/Textures:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BattleBox/Textures:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BattleBox/Textures:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattleBox/Textures:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.378929),
"update": 0,
"values": [90.0, 0.0]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BattleBox/Textures:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("BattleBox/Textures:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattleBox/Textures:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 0.378929),
"update": 0,
"values": [90.0, 0.0]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BattleBox/Textures:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BattleBox/Textures:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.353553),
"update": 0,
"values": [0.0, -90.0]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattleBox/Textures:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.329877),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BattleBox/Textures:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.0717937),
"update": 0,
"values": [Vector2(0, 100), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattleBox/Textures:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BattleBox/Textures:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("BattleBox/Textures:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BattleBox/Textures:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "value"
tracks/2/path = NodePath("BattleBox/Textures:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[node name="Battle" type="Node2D"]
script = ExtResource( 3 )
backs = [ExtResource( 4 )]
damage = {
"amount": 2.0,
"element": "fire",
"type": "normal"
}

[node name="BattleBox" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Textures" type="Node2D" parent="BattleBox"]
scale = Vector2(1e-05, 1e-05)

[node name="Back" type="TextureRect" parent="BattleBox/Textures"]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
rect_pivot_offset = Vector2(20, 20)
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="NinePatchRect" parent="BattleBox/Textures"]
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
rect_pivot_offset = Vector2(23, 23)
texture = ExtResource( 2 )
patch_offset_left = 3
patch_offset_top = 3
patch_offset_right = 3
patch_offset_bottom = 3
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collision" type="CollisionPolygon2D" parent="BattleBox"]
scale = Vector2(0.75, 0.75)
polygon = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20, -20, -20, -30, -20, -30, 30, 30, 30, 30, -30, -20, -30)

[node name="Anim" type="AnimationPlayer" parent="."]
anims/elastic_in = SubResource( 7 )
anims/roll_in = SubResource( 2 )
anims/roll_in_with_style = SubResource( 3 )
anims/roll_out = SubResource( 4 )
anims/slide_in_bottom = SubResource( 5 )
anims/slide_out_bottom = SubResource( 6 )

[node name="BorderSensor" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Collision2" type="CollisionPolygon2D" parent="BorderSensor"]
scale = Vector2(0.75, 0.75)
polygon = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20, -20, -20, -30, -20, -30, 30, 30, 30, 30, -30, -20, -30)
[connection signal="area_entered" from="BorderSensor" to="." method="_on_Damage_area_entered"]
